# Hoominer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  hoominer.c  hoosat-miner.spec  linux-clean-build.sh  miner.c  release.sh  windows-clean-build.bat
algorithms/GPU/CUDA/: combile.bat  compile.sh  hoohash.cu
algorithms/GPU/OpenCL/: Makefile  blake3.cl  opencl-compiler  opencl-compiler.c  test-blake-kernel  test-blake-kernel.c  test-blake3-kernel.c  test-hoohash-kernel copy.c  test-hoohash-kernel.c  test-kernel.c
algorithms/GPU/OpenCL/Hoohash/: Hoohash.cl  hoohash_cl.h
algorithms/GPU/OpenCL/blake3/: blake3-optimized.cl  blake3.cl
releases/hoominer/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh  hoosat-miner.py  mmp-external.conf  mmp-launcher.sh
src/: Hoohash_cl.h  api.c  api.h  config.c  config.h  cuda-host.cu  cuda-host.h  datatypes.c  datatypes.h  globals.h  hoohash-miner.c  hoohash-miner.h  hoohash_cl.h  hoohash_cl_data.c  hoohash_cl_data.inc  hoominer.c  miner-hoohash.c  miner-hoohash.h  miner-pepepow.c  miner-pepepow.h  opencl-host.c  opencl-host.h  opencl.c  opencl.h  overclock.c  overclock.h  platform_compat.c  platform_compat.h  reporting.c  reporting.h  stratum.c  stratum.h  target.c  target.h
